# android-log-cpp

./: CMakeLists.txt  README.rst
src/: CMakeLists.txt  device.cc  device.h  main.cc
